# sauron

./: .gitignore  Paths.cmake  README.md
camera_stream/: pc_receiver.py  rpi_sender.py
esp32_motor_control/: CMakeLists.txt  Readme.md  sdkconfig
esp32_motor_control/main/: CMakeLists.txt  ESP32Serial.cpp  ESP32Serial.h  SCSCL.cpp  SCSerial.cpp  SCSerial.h  gox_sts_motor_main.cpp  motor_control_from_pi.cpp  pi_serial.py
esp32_motor_control/pi_control/: encoder_gui.py  image_capture.py  pi_serial.py  pi_serial_gui_main.py
mnn_live_face_detection/: CMakeLists.txt
mnn_live_face_detection/src/: CameraHandler.hpp  LibCamera.cpp  LibCamera.h  MotorCommunication.hpp  UltraFace.cpp  UltraFace.h  face_det_live_main.cpp  live_camera_stream_main.cpp  serial_main.cpp  serialib.cpp  serialib.h  single_inference_main.cpp
